...
                width = 3.0.dp,
                color = Color(59, 170, 0, 255),
                shape = RoundedCornerShape(8.dp),
            )
            .background(Color(226, 237, 169, 255))
            .padding(16.dp)
            .testTag("lazy_columnn")
    ) {
        item {
            Text(
                text = title,
                fontWeight = FontWeight.Bold,
                fontSize = 24.sp,
...

        item {
            Spacer(modifier = Modifier.height(16.dp))
            Column(horizontalAlignment = Alignment.CenterHorizontally, modifier = Modifier.fillMaxWidth()) {
                DefaultButton(
                    onClick = onSaveClick,
                    text = "Guardar"
                )
            }
        }
    }
}

...
